# MqttCPPTestKod

nfc-card-writer/: platformio.ini
nfc-card-writer/lib/Adafruit_PN532/: Adafruit_PN532.cpp
nfc-card-writer/src/: main.cpp
testcppnfc/: atomic.h  lv_conf.h  platformio.ini
testcppnfc/.pio-local-core/: appstate.json
testcppnfc/docs/: ARCHITECTURE.md  FOLDER_STRUCTURE.md  GETTING_STARTED.md  HARDWARE_WIRING.md  SDL_SIMULATOR.md
testcppnfc/lib/Adafruit_PN532/: Adafruit_PN532.cpp
testcppnfc/lib/AsyncMqttClient-esphome/src/: AsyncMqttClient.cpp  AsyncMqttClient.hpp
testcppnfc/simulator/: CMakeLists.txt  lv_conf_sim.h  main.cpp
testcppnfc/src/: main.cpp
testcppnfc/src/config/: Config.h  Logger.h  RuntimeValues.h  ServiceSwitches.h
testcppnfc/src/drivers/: ILI9341Driver.cpp  ILI9341Driver.h  NfcTypes.h  PN532Driver.cpp  PN532Driver.h
testcppnfc/src/logic/: MifareCardHandler.cpp  MifareCardHandler.h
testcppnfc/src/screens/: FuntoriaScreenContext.h  FuntoriaScreens.h  funtoria_screen_custom_text.c  funtoria_screen_error.c  funtoria_screen_nfc_read.c  funtoria_screen_payment_fail.c  funtoria_screen_payment_ok.c  funtoria_screen_phone_detected.c  funtoria_screen_setup_required.c  funtoria_screen_style.h  funtoria_screen_waiting.c
testcppnfc/src/services/: LcdService.cpp  LcdService.h  LcdTypes.h  LedAnimationService.cpp  LedAnimationService.h  LedTypes.h  MqttService.cpp  MqttService.h  MqttTypes.h  NfcService.cpp  NfcService.h  OtaService.cpp  OtaService.h  WebService.cpp  WebService.h
testcppnfc/src/system/: OsWrappers.h
testcppnfc/src/utils/: SpiffsConfig.cpp  SpiffsConfig.h
testesp32LCD/: platformio.ini
testesp32LCD/include/: lv_conf.h
testesp32LCD/src/: main.cpp
(+1 files in other folders)
